load("//packages/angular-bazel:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//services/admin-client:__subpackages__"])

sass_binary(
    name = "app_styles",
    src = "app.component.sass",
)

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
    ],
    angular_assets = [":app_styles"],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        "//packages/enums",
        "//packages/models",
        "//services/admin-client/environment",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//ngx-socket-io",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        ":base",
        "@npm//@angular/core",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        ":base",
        "@npm//@angular/common",
        "@npm//@angular/core",
    ],
)
