load("@npm_bazel_protractor//:index.bzl", "protractor_web_test_suite")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "e2e",
    testonly = 1,
    srcs = glob(["src/**/*.ts"]),
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@types/jasmine",
        "@npm//jasmine",
        "@npm//protractor",
        "@npm//tslib",
    ],
)

# FIXME tests for live server currently fail because of
# https://stackoverflow.com/questions/61423031
# protractor_web_test_suite(
#     name = "dev_server_test",
#     on_prepare = "//packages/angular-bazel:dev-server.on-prepare.js",
#     server = "//services/admin-client:live_server",
#     deps = [":e2e"],
# )

protractor_web_test_suite(
    name = "pwa_server_test",
    on_prepare = "//packages/angular-bazel:pwa-server.on-prepare.js",
    server = "//services/admin-client:prod_server",
    deps = [
        ":e2e",
        "@npm//tslib",
    ],
)
