load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

ts_library(
    name = "environment",
    srcs = glob(["*.ts"]),
    module_name = "@cia/environment",
    tsconfig = "//services/admin-client:tsconfig.json",
    use_angular_plugin = True,
    deps = [
        "@npm//@angular/compiler-cli",
        "@npm//@angular/core",
    ],
)
