load("//packages/angular-bazel:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/admin-client:__subpackages__"])

ng_ts_library(
    name = "environment",
    srcs = glob(["*.ts"]),
    module_name = "@cia/environment",
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        "@npm//@angular/core",
    ],
)
