load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//packages/angular-bazel:tools/angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/client:__subpackages__"])

sass_binary(
    name = "app_styles",
    src = "app.component.sass",
)

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
        "app-routing.module.ts",
        "auth-token.interceptor.ts",
        "service-worker.service.ts",
    ],
    angular_assets = [":app_styles"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "//packages/enums",
        "//services/client/environment",
        "//services/client/features/ideas",
        "//services/client/features/login",
        "//services/client/features/user",
        "//services/client/shared",
        "//services/client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        ":base",
        "//services/client/environment",
        "//services/client/store",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//@ngrx/store-devtools",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        ":base",
        "//services/client/environment",
        "//services/client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        ":base",
        ":prod",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
