load("@npm_bazel_protractor//:index.bzl", "protractor_web_test_suite")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "e2e",
    testonly = 1,
    srcs = glob(["src/**/*.ts"]),
    tsconfig = "//services/client:tsconfig-test",
    deps = [
        "@npm//@types/jasmine",
        "@npm//jasmine",
        "@npm//protractor",
        "@npm//tslib",
    ],
)

#protractor_web_test_suite(
#    name = "dev_server_test",
#    on_prepare = ":dev-server.on-prepare.js",
#    server = "//services/client/src:live_server",
#    deps = [":e2e"],
#)

protractor_web_test_suite(
    name = "pwa_server_test",
    on_prepare = ":pwa-server.on-prepare.js",
    server = "//services/client/src:pwa_server",
    deps = [
        ":e2e",
        "@npm//tslib",
    ],
)

protractor_web_test_suite(
    name = "prod_server_test",
    on_prepare = ":local-server.on-prepare.js",
    server = "//services/client/src:prod_server",
    deps = [
        ":e2e",
        "@npm//tslib",
    ],
)
