load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//services/client:__subpackages__"])

ts_library(
    name = "shared",
    srcs = glob(["**/*.ts"]),
    module_name = "@cic/shared",
    tsconfig = "//services/client:tsconfig.json",
    use_angular_plugin = True,
    deps = [
        "//packages/enums",
        "//services/client/environment",
        "@npm//@angular/common",
        "@npm//@angular/compiler-cli",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
