load("//packages/angular-bazel:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/client:__subpackages__"])

ng_ts_library(
    name = "shared",
    srcs = glob(["**/*.ts"]),
    module_name = "@cic/shared",
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "//packages/enums",
        "//services/client/environment",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
